objects/Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Residential_Q30_1_2__c</fullName>
        <label>Res Array 1 Configuration Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q30_2_1__c</fullName>
        <label>Res Array 2 Configuration Parallel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q30_Array_Input_1__c</fullName>
        <label>Res Array 1 Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q30_Array_Input_2__c</fullName>
        <label>Res Array 2 Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q30_Array_Input_3__c</fullName>
        <label>Res Array 3 Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q31_EGC_Size__c</fullName>
        <label>Res equipment Ground Path Size</label>
        <picklist>
            <picklistValues>
                <fullName>#14 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#12 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#10 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#8 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#6 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#4 AWG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q35_Distance__c</fullName>
        <label>Res Array/Invertor Conductor Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Q35_Quantity__c</fullName>
        <label>Res Array/Invertor Conductor Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Q35_Size__c</fullName>
        <label>Res Array/Invertor Conductor Size</label>
        <picklist>
            <picklistValues>
                <fullName>#14 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#12 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#10 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#8 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#6 AWG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q44_Distance__c</fullName>
        <label>Res Invertor/MSP Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Q44_Quantity__c</fullName>
        <label>Res Invertor/MSP Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Q44_Size__c</fullName>
        <label>Res Invertor/MSP Size</label>
        <picklist>
            <picklistValues>
                <fullName>#14 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#12 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#10 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#8 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#6 AWG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q46_Distance_EU__c</fullName>
        <label>Residential Q46 Distance EU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Q46_Quantity_EU__c</fullName>
        <label>Residential Q46 Quantity EU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Q49_Rating__c</fullName>
        <label>Res MSP Bus Bar Max Current Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q50_Rating__c</fullName>
        <label>Res MSP Main Breaker Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q51_Rating__c</fullName>
        <label>Res MSP Solar Breaker Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_ReadingsMeasurements_Comment__c</fullName>
        <label>Residential ReadingsMeasurements Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Result__c</fullName>
        <label>Residential Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_SYSTEM_SAFETY_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential SYSTEM SAFETY ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_SYSTEM_SAFETY_Comments__c</fullName>
        <label>Residential SYSTEM SAFETY Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_SYSTEM_SAFETY_Hazards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential SYSTEM SAFETY Hazards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_String_Parallel_1__c</fullName>
        <description>Include String configuration</description>
        <label>String Parallel 1</label>
        <picklist>
            <picklistValues>
                <fullName>At the inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_String_Parallel_2__c</fullName>
        <label>String Parallel 2</label>
        <picklist>
            <picklistValues>
                <fullName>At the inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_String_Parallel_3__c</fullName>
        <label>String Parallel 3</label>
        <picklist>
            <picklistValues>
                <fullName>At the inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_laying_system__c</fullName>
        <description>This is an additional field required for the German checklist</description>
        <label>Laying System</label>
        <picklist>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resindential_Photo_MSP__c</fullName>
        <label>Photo – MSP</label>
        <picklist>
            <picklistValues>
                <fullName>Particular switch General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Particular switch PV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>overview MSP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inspection’s Result. PASS/FAILED</description>
        <label>Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Details__c</fullName>
        <label>Score Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Inspector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed - Holding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inspection</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>